// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/RepositoryNotifications.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between bg-gray-100 pr-3 py-1.5 dark:bg-gray-darker dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
        >
          <span
            aria-label="Open repository"
            class="Tooltip__TooltipBase-sc-17tf59c-0 rtmEP tooltipped-e"
            id=":r0:"
            role="tooltip"
          >
            <button
              aria-describedby=":r1:-loading-announcement"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-loading="false"
              data-no-visuals="true"
              sx="[object Object]"
              type="button"
            >
              <span
                class="Box-sc-g0xbh4-0 lbSBsX"
                data-component="buttonContent"
                sx="[object Object]"
              >
                <span
                  data-component="text"
                >
                  <div
                    class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                    data-align="center"
                    data-direction="horizontal"
                    data-gap="condensed"
                    data-justify="start"
                    data-padding="none"
                    data-wrap="nowrap"
                  >
                    <img
                      alt=""
                      class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                      data-component="Avatar"
                      height="18"
                      size="18"
                      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                      sx="[object Object]"
                      width="18"
                    />
                    <span
                      class="Text-sc-17v1xeu-0 gCQeDW"
                    >
                      gitify-app/notifications-test
                    </span>
                  </div>
                </span>
                <span
                  class="Box-sc-g0xbh4-0 bPvALJ"
                  data-component="trailingVisual"
                  sx="[object Object]"
                >
                  <span
                    aria-hidden="true"
                    class="Box-sc-g0xbh4-0 dZZxCI"
                    data-component="ButtonCounter"
                    sx="[object Object]"
                  >
                    2
                  </span>
                  <span
                    class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                  >
                     (
                    2
                    )
                  </span>
                </span>
              </span>
            </button>
          </span>
        </div>
        <div
          class="opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":r3:-loading-announcement"
              aria-labelledby=":r2:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r2:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r5:-loading-announcement"
              aria-labelledby=":r4:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r4:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r7:-loading-announcement"
              aria-labelledby=":r6:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r6:"
              popover="auto"
            >
              Hide repository notifications
            </span>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between bg-gray-100 pr-3 py-1.5 dark:bg-gray-darker dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
      >
        <span
          aria-label="Open repository"
          class="Tooltip__TooltipBase-sc-17tf59c-0 rtmEP tooltipped-e"
          id=":r0:"
          role="tooltip"
        >
          <button
            aria-describedby=":r1:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </span>
      </div>
      <div
        class="opacity-0 transition-opacity group-hover:opacity-80"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
          data-align="center"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <button
            aria-describedby=":r3:-loading-announcement"
            aria-labelledby=":r2:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r2:"
            popover="auto"
          >
            Mark repository as done
          </span>
          <button
            aria-describedby=":r5:-loading-announcement"
            aria-labelledby=":r4:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r4:"
            popover="auto"
          >
            Mark repository as read
          </span>
          <button
            aria-describedby=":r7:-loading-announcement"
            aria-labelledby=":r6:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-chevron-down"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r6:"
            popover="auto"
          >
            Hide repository notifications
          </span>
        </div>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/RepositoryNotifications.tsx should toggle repository notifications visibility 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between bg-gray-100 px-3 py-1.5 dark:bg-gray-darker dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
        >
          <svg
            aria-hidden="true"
            class="text-gray-500 dark:text-gray-300"
            fill="currentColor"
            focusable="false"
            height="16"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
            />
          </svg>
          <span
            class="cursor-pointer truncate"
          >
            gitify-app/notifications-test
          </span>
        </div>
        <div
          class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
        >
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark repository as done"
            type="button"
          >
            <svg
              aria-label="Mark repository as done"
              class="octicon octicon-check"
              fill="currentColor"
              focusable="false"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark repository as read"
            type="button"
          >
            <svg
              aria-label="Mark repository as read"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Show repository notifications"
            type="button"
          >
            <svg
              aria-label="Show repository notifications"
              class="octicon octicon-chevron-right"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 12 12"
              width="14"
            >
              <path
                d="M4.7 10c-.2 0-.4-.1-.5-.2-.3-.3-.3-.8 0-1.1L6.9 6 4.2 3.3c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        class="group flex justify-between bg-gray-100 px-3 py-1.5 dark:bg-gray-darker dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
        >
          <svg
            aria-hidden="true"
            class="text-gray-500 dark:text-gray-300"
            fill="currentColor"
            focusable="false"
            height="16"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
            />
          </svg>
          <span
            class="cursor-pointer truncate"
          >
            gitify-app/notifications-test
          </span>
        </div>
        <div
          class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
        >
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark repository as done"
            type="button"
          >
            <svg
              aria-label="Mark repository as done"
              class="octicon octicon-check"
              fill="currentColor"
              focusable="false"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Mark repository as read"
            type="button"
          >
            <svg
              aria-label="Mark repository as read"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <button
            class="h-full hover:text-green-500 focus:outline-none"
            title="Hide repository notifications"
            type="button"
          >
            <svg
              aria-label="Hide repository notifications"
              class="octicon octicon-chevron-down"
              fill="currentColor"
              focusable="false"
              height="14"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 12 12"
              width="14"
            >
              <path
                d="M6 8.825c-.2 0-.4-.1-.5-.2l-3.3-3.3c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0l2.7 2.7 2.7-2.7c.3-.3.8-.3 1.1 0 .3.3.3.8 0 1.1l-3.2 3.2c-.2.2-.4.3-.6.3Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between bg-gray-100 px-3 py-1.5 dark:bg-gray-darker dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
      >
        <svg
          aria-hidden="true"
          class="text-gray-500 dark:text-gray-300"
          fill="currentColor"
          focusable="false"
          height="16"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
          />
        </svg>
        <span
          class="cursor-pointer truncate"
        >
          gitify-app/notifications-test
        </span>
      </div>
      <div
        class="flex items-center justify-center gap-2 opacity-0 transition-opacity group-hover:opacity-80"
      >
        <button
          class="h-full hover:text-green-500 focus:outline-none"
          title="Mark repository as done"
          type="button"
        >
          <svg
            aria-label="Mark repository as done"
            class="octicon octicon-check"
            fill="currentColor"
            focusable="false"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
        </button>
        <button
          class="h-full hover:text-green-500 focus:outline-none"
          title="Mark repository as read"
          type="button"
        >
          <svg
            aria-label="Mark repository as read"
            class="octicon octicon-read"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="14"
          >
            <path
              d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
            />
          </svg>
        </button>
        <button
          class="h-full hover:text-green-500 focus:outline-none"
          title="Hide repository notifications"
          type="button"
        >
          <svg
            aria-label="Hide repository notifications"
            class="octicon octicon-chevron-down"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 12 12"
            width="14"
          >
            <path
              d="M6 8.825c-.2 0-.4-.1-.5-.2l-3.3-3.3c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0l2.7 2.7 2.7-2.7c.3-.3.8-.3 1.1 0 .3.3.3.8 0 1.1l-3.2 3.2c-.2.2-.4.3-.6.3Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/RepositoryNotifications.tsx should use default repository icon when avatar is not available 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between bg-gray-100 pr-3 py-1.5 dark:bg-gray-darker dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
        >
          <span
            aria-label="Open repository"
            class="Tooltip__TooltipBase-sc-17tf59c-0 rtmEP tooltipped-e"
            id=":r10:"
            role="tooltip"
          >
            <button
              aria-describedby=":r11:-loading-announcement"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-loading="false"
              data-no-visuals="true"
              sx="[object Object]"
              type="button"
            >
              <span
                class="Box-sc-g0xbh4-0 lbSBsX"
                data-component="buttonContent"
                sx="[object Object]"
              >
                <span
                  data-component="text"
                >
                  <div
                    class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                    data-align="center"
                    data-direction="horizontal"
                    data-gap="condensed"
                    data-justify="start"
                    data-padding="none"
                    data-wrap="nowrap"
                  >
                    <img
                      alt=""
                      class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                      data-component="Avatar"
                      height="18"
                      size="18"
                      src=""
                      sx="[object Object]"
                      width="18"
                    />
                    <span
                      class="Text-sc-17v1xeu-0 gCQeDW"
                    >
                      gitify-app/notifications-test
                    </span>
                  </div>
                </span>
                <span
                  class="Box-sc-g0xbh4-0 bPvALJ"
                  data-component="trailingVisual"
                  sx="[object Object]"
                >
                  <span
                    aria-hidden="true"
                    class="Box-sc-g0xbh4-0 dZZxCI"
                    data-component="ButtonCounter"
                    sx="[object Object]"
                  >
                    2
                  </span>
                  <span
                    class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                  >
                     (
                    2
                    )
                  </span>
                </span>
              </span>
            </button>
          </span>
        </div>
        <div
          class="opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":r13:-loading-announcement"
              aria-labelledby=":r12:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r12:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r15:-loading-announcement"
              aria-labelledby=":r14:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r14:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r17:-loading-announcement"
              aria-labelledby=":r16:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down"
                fill="currentColor"
                focusable="false"
                height="16"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r16:"
              popover="auto"
            >
              Hide repository notifications
            </span>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between bg-gray-100 pr-3 py-1.5 dark:bg-gray-darker dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium opacity-80"
      >
        <span
          aria-label="Open repository"
          class="Tooltip__TooltipBase-sc-17tf59c-0 rtmEP tooltipped-e"
          id=":r10:"
          role="tooltip"
        >
          <button
            aria-describedby=":r11:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    src=""
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </span>
      </div>
      <div
        class="opacity-0 transition-opacity group-hover:opacity-80"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
          data-align="center"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <button
            aria-describedby=":r13:-loading-announcement"
            aria-labelledby=":r12:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r12:"
            popover="auto"
          >
            Mark repository as done
          </span>
          <button
            aria-describedby=":r15:-loading-announcement"
            aria-labelledby=":r14:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-read"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r14:"
            popover="auto"
          >
            Mark repository as read
          </span>
          <button
            aria-describedby=":r17:-loading-announcement"
            aria-labelledby=":r16:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-chevron-down"
              fill="currentColor"
              focusable="false"
              height="16"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r16:"
            popover="auto"
          >
            Hide repository notifications
          </span>
        </div>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
